Fix schema problems and deploy test data

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -2,3 +2,11 @@
 	engine = pg
 	# plan_file = sqitch.plan
 	# top_dir = .
+[target "mbaw"]
+    uri = db:pg://devel@127.0.0.1:5432/devel
+[engine "pg"]
+    target = mbaw
+[deploy]
+    veriry = true
+[target "prod"]
+	uri = db:postgres://pbfhvmrf:Glm4smV5AQdB9Sx0hWXbhRyiPnLXcu8t@tuffi.db.elephantsql.com/pbfhvmrf
